@@ -1,3 +1,7 @@
+2006-04-09 12:28 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Tools/gopen.m: Streamline gopen code.
+
 2006-04-06  Adam Fedor  <fedor@gnu.org>
 
 	* Tools/gcloseall.m: Include NSProcessInfo.h. Fixes bug #16212.
